# icli

./: .clang-format  CMakeLists.txt  Doxyfile.in  README.md  TODO  format_code  icli.c  icli.h  requirements.txt  valgrind.sup
examples/: cli.c
test/: test.py  test.sh
